<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.passenger.PassengerDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <include
            android:id="@+id/actionBar"
            layout="@layout/action_bar" />

        <TextView
            android:id="@+id/flightSelectionTextView"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:text="@string/passenger_text_header"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionBar" />

        <TextView
            android:id="@+id/passengerNameTextView"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:text="@string/passenger_default_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightSelectionTextView" />

        <TextView
            android:id="@+id/priceInfo"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:text="@string/same_person_question"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/passengerNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/flightSelectionTextView" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/yesRadioButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passengerNameTextView">
            <RadioButton
                android:id="@+id/yesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/orange_strong"
                android:text="@string/yes_text"/>
            <RadioButton
                android:id="@+id/noRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/orange_strong"
                android:layout_marginStart="25dp"
                android:text="@string/no_text"/>
        </RadioGroup>

        <TextView
            android:id="@+id/adultDataText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:text="@string/adult_data_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/passengerQuestion"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom"
            android:text="@string/required_fields_hint"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adultDataText" />

        <include
            android:id="@+id/firstNameEditText"
            layout="@layout/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passengerQuestion" />

        <include
            android:id="@+id/lastNameEditText"
            layout="@layout/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <include
            android:id="@+id/birthDateEditText"
            layout="@layout/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

        <include
            android:id="@+id/genderEditText"
            layout="@layout/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDateEditText" />

        <include
            android:id="@+id/nationalityEditText"
            layout="@layout/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderEditText" />

        <include
            android:id="@+id/footer"
            layout="@layout/footer_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nationalityEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>